--- a/profile.html
+++ b/profile.html
@@ -45,8 +45,9 @@
         </div>
         <div class="card">
             <h3>XP per Project</h3>
+            <div id="chartContainer">
             <div id="projectchart">
-            </div>
+            </div></div>
         </div>
         
     </div>
